2006-06-06  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/c.m4 (AC_PROG_CC_C_O): Remove core file, in
	case the compiler dumps core.  Problem reported for
	OpenServer 5.0.7 by Tim Rice in
	<http://lists.gnu.org/archive/html/bug-autoconf/2006-06/msg00019.html>.
	* lib/autoconf/general.m4 (_AC_COMPILE_IFELSE, _AC_LINK_IFELSE):
	Likewise.

2006-06-06  Tim Rice <tim@multitalents.net>.

	* lib/freeze.mk: Quiet check-forbidden-patterns so the string
	"ERROR" only shows up in "make check" output if there is an
	error.

2006-06-06  Eric Blake  <ebb9@byu.net>

	* tests/tools.at (automatically allowed tokens): Fix typo.

2006-06-05  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: Don't blame non-GNU VPATH compatibility issues on Automake.

	* doc/autoconf.texi (Integer Overflow): Mention that INT_MIN % -1
	typically overflows on x86 CPUs, even though the C standard
	requires otherwise.

2006-06-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* configure.ac (AC_INIT): Bump to 2.59e.
	* NEWS: Update.

2006-06-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Version 2.59d.

	* config/texinfo.tex: Sync from upstream.

	* bin/autoreconf.in: Trace `LT_CONFIG_LTDL_DIR'; if it has been
	seen, invoke libtoolize with `--ltdl' argument.
	* lib/autom4te.in (Autoreconf-preselections): Adjust.
	* NEWS: Update.
	Suggested by Eric Blake.

2006-06-05  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: Whoops!  AC_FUNC_STRNLEN isn't obsolescent.  Problem
	reported by Ralf Wildenhues.
	* doc/autoconf.texi (AC_FUNC_STRNLEN): Likewise.

2006-06-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* THANKS: Update.

2006-06-05  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi: Modernize some of the references to Solaris.

2006-06-05  Stepan Kasal  <kasal@ucw.cz>

	* lib/m4sugar/m4sugar.m4 (m4_require): Modify the error
	message issued by AC_REQUIRE.
	* tests/m4sugar.at: Check m4_require's error message.
	* tests/base.at: Check AC_REQUIRE's error message.