@@ -1,3 +1,9 @@
+2006-06-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* lib/autoconf/functions.m4 (AC_FUNC_ALLOCA): Work around
+	`unused variable' compiler warning, for `-Wall -Werror'.
+	Report by Jaap Haitsma <jaap@haitsma.org>.
+
 2006-06-06  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* lib/autoconf/c.m4 (AC_PROG_CC_C_O): Remove core file, in
